# service-registry

./: LICENSE  README.txt  service-registry.opam
lib/: .merlin  DB.ml  DB.mli  client.ml  client.mli  jbuild  model.ml  model.mli  service.ml  service.mli  watches.ml  watches.mli
src/: .#client.ml  .#model.ml  .#service.mli  .#store.mli  .merlin  DB.mli  client.ml  client.mli  jbuild  model.ml  model.mli  service  service.ml  service.mli  store.ml  store.mli  store.ml~
test/: .#db_test.ml  .merlin  db_test.ml  jbuild  jbuild~  model_test.ml  model_test.ml~  service_test.ml  test_sr.ml
