version: "0.1.0"
opam-version: "1.2"
maintainer: "Samuel Riyad"
authors: ["Samuel Riyad"]
tags: []
license: "MIT"
homepage: "https://github.com/XnuKernPoll/service-registry"
dev-repo: "https://github.com/XnuKernPoll/service-registry"
bug-reports: ""
doc: ""
build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
depends: [
  "jbuilder" {build}
  "ounit" {test}
  "irmin-unix"
  "batteries"
  "uuidm"
  "cmdliner"
]
